--- a/action.yml
+++ b/action.yml
@@ -5,44 +5,50 @@ branding:
   color: 'red'
 inputs:
   ageGroup:
-    description: 'Required. (If not specified, the upload will go into “draft” status, rather than failing.) Age group of the build. This can be TEENS_AND_ADULTS, MIXED_AGES, or CHILDREN. For more information, see Age Group Self-Certification and Youth Requirements.'
+    description: 'Age group of the build. This can be TEENS_AND_ADULTS, MIXED_AGES, or CHILDREN. (If not specified, the upload will go into “draft” status, rather than failing). For more information, see Age Group Self-Certification and Youth Requirements.'
     required: true
   appId:
-    description: 'Required. Specifies the ID of your app. Obtained from the API tab of your app in the Oculus Dashboard.'
+    description: 'Specifies the ID of your app. Obtained from the API tab of your app in the Oculus Dashboard.'
     required: true
   appSecret:
-    description: 'Either app secret or user token required. Specifies the app secret. Obtained from the API tab of your app in the Oculus developer dashboard.'
+    description: 'Specifies the app secret. Obtained from the API tab of your app in the Oculus developer dashboard. Either app secret or user token required.'
     required: false
   token:
-    description: 'Either app secret or user token required. A user token obtained by the get-access-token command or from the API tab of your app in the Oculus developer dashboard.'
+    description: 'A user token obtained by the get-access-token command or from the API tab of your app in the Oculus developer dashboard. Either app secret or user token required.'
     required: false
   apkPath:
-    description: 'Required. Specifies the path to the APK file to upload.'
-    required: true
-  assetsDir:
-    description: 'Optional Specifies the path to the directory with DLCs for this build.'
-    required: false
-  assetFilesConfig:
-    description: 'Optional. Specifies the path to the file that configures required assets or associates DLC assets with in-app purchases.'
+    description: 'Specifies the path to the APK to upload. Either apkPath or buildDir is required.'
     required: false
   obbPath:
-    description: 'Optional. Specifies the path to the Expansion file (OBB) to upload.'
+    description: 'Specifies the path to the Expansion file (OBB) to upload.'
+    required: false
+  buildDir:
+    description: 'Specifies the path to the directory that contains the build files. If specified, the plugin will look for the APK and OBB files in this directory. Either apkPath or buildDir is required.'
+    required: false
+  assetsDir:
+    description: 'Specifies the path to the directory with DLCs for this build.'
+    required: false
+  assetFilesConfig:
+    description: 'Specifies the path to the file that configures required assets or associates DLC assets with in-app purchases.'
     required: false
   releaseChannel:
-    description: 'Defaults to ALPHA. Specifies the release channel for uploading the build. Use store for the "Production (AppLab)" or "Production (Store)" channels. Release channel names are not case-sensitive.'
+    description: 'Specifies the release channel for uploading the build. Use store for the "Production (AppLab)" or "Production (Store)" channels. Release channel names are not case-sensitive. Defaults to ALPHA.'
     required: false
     default: 'ALPHA'
   releaseNotes:
-    description: 'Optional. Specifies the release note text shown to users. Enclose the text in quotation marks. Encodes double quotes as \". Encode newlines as \n.'
+    description: 'Specifies the release note text shown to users. Encodes double quotes as `\"`. Encode newlines as `\n`.'
     required: false
   languagePacksDir:
-    description: 'Optional. The path to the directory that contains language packs.'
+    description: 'The path to the directory that contains language packs.'
     required: false
   debugSymbolsDir:
-    description: 'Optional. The path to the directory that contains debug symbol files.'
+    description: 'Path to the folder that contains the debug symbol file(s).'
+    required: false
+  debugSymbolsZip:
+    description: 'The path to the debug symbol zip file. If provided this will be used instead of the debugSymbolsDir and will unzip before uploading.'
     required: false
   debugSymbolsPattern:
-    description: 'Optional. A pattern sequence that can match the filenames of all the debug symbol files. An asterisk may be used to indicate a wildcard, for example, *.sym.so.'
+    description: 'A pattern sequence that can match the filenames of all the debug symbol files. An asterisk may be used to indicate a wildcard, for example, *.sym.so.'
     required: false
 outputs:
   build_id:
