--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "upload-meta-quest-build",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A GitHub Action for uploading a Meta Quest app to the Meta Quest store.",
   "author": "buildalon",
   "repository": {
@@ -18,16 +18,23 @@
     "action"
   ],
   "license": "MIT",
-  "main": "dist/index.js",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1"
+    "@actions/exec": "^1.1.1",
+    "@actions/glob": "^0.4.0",
+    "@actions/io": "^1.1.3",
+    "unzip-stream": "^0.3.4"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.34.0"
+    "@types/node": "^22.3.0",
+    "@types/unzip-stream": "^0.3.4",
+    "@vercel/ncc": "^0.34.0",
+    "shx": "^0.3.4",
+    "typescript": "^5.5.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && npm ci && ncc build src/index.js -o dist --source-map --license licenses.txt"
+    "build": "npm run clean && npm run bundle",
+    "bundle": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "clean": "npm install && shx rm -rf dist/ out/ node_modules/ && npm ci"
   }
 }
